Fixed z-index of fav/del buttons.

--- a/src/pages/Streaming/_streaming.scss
+++ b/src/pages/Streaming/_streaming.scss
@@ -196,6 +196,7 @@
 
       &.button-do {
         background-color: var(--color-white);
+        z-index: 1;
       }
 
       &.button-del:hover {
