--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -835,6 +835,7 @@ section.blog-post {
 
 .streaming__results li button.button-do {
   background-color: var(--color-white);
+  z-index: 1;
 }
 
 .streaming__results li button.button-del:hover {
